# contract-ingest

./: .gitignore  README.md  contract_ingest_detailed_spec_complete.md  contract_ingest_mvp_plan_complete.md  pyproject.toml
_snapshots/: file_manifest_20260315_180436.txt  git_diff_unstaged_20260315_180436.patch  git_status_20260315_180436.txt
benchmarks/: pdf_inventory.csv
contract_ingest/: __init__.py  config.py
contract_ingest/benchmarks/: baseline_runner.py  compare_layouts.py  compare_reading_order.py  evaluate_outputs.py  report_baseline.py  surya_runner.py
contract_ingest/cli/: ingest_contract.py
contract_ingest/domain/: enums.py  models.py  schemas.py
contract_ingest/export/: write_chunks_jsonl.py  write_document_json.py  write_review_json.py
contract_ingest/extract/: block_merger.py  layout.py  layout_ppstructure.py  native_text.py  ocr_base.py  ocr_paddle.py  pdf_classifier.py  reading_order_ppstructure.py
contract_ingest/normalize/: chunk_builder.py  clause_splitter.py  (+7 more)
data/: baseline_manifest.jsonl
scripts/: check_quality_outputs.sh  eval_baseline_contracts.py  run_pdf_benchmark.sh  summarize_pdf_benchmark.py
tests/: test_baseline_runner.py  test_benchmark_eval.py  test_block_merger.py  test_chunk_builder.py  test_clause_splitter.py  test_compare_config.py  test_contract_type_router.py  test_counterparty_finder.py  test_field_extractor.py  test_field_validators.py  test_layout_filtering.py  test_layout_ppstructure_adapter.py  test_review_export.py  test_summarize_pdf_benchmark.py  test_tail_clause_finder.py  test_title_extractor.py
(+17 files in other folders)
